--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,20 +1,18 @@
+
+server:
+    port: 1001
+
 spring:
 
   datasource:
-    url: jdbc:h2:mem:testdb
-    username: sa
-    password:
-    driverClassName: org.h2.Driver
+    url: jdbc:mysql://localhost:3306/maes
+    username: root
+    password: root
 
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
-    properties.hibernate.show_sql: true
-    properties.hibernate.format_sql: true
+    properties:
+          hibernate:
+             ddl-auto: create
+             dialect:  org.hibernate.dialect.MySQL8Dialect
 
-  h2:
-    console:
-      enabled: true
-      path: /h2
 
-server:
-  port: 1001
